--- a/templates/update.html
+++ b/templates/update.html
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
             <label>Date of Birth</label>
-            <input type="text" class="form-control" id="dob" name="dob" placeholder="DD/MM/YYYY"
+            <input type="date" class="form-control" id="dob" name="dob" placeholder="DD/MM/YYYY"
                    value="{{ student.dob }}" required>
         </div>
         <div class="form-group">
